<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="overskyet.unicon.ui.fragments.units.UnitsConversionFragment">
    
    <data>
        <variable
            name="unitsConversion"
            type="overskyet.unicon.ui.fragments.units.UnitsConversionFragment" />
    </data>
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar_fragment_units_conversion"
            layout="@layout/app_toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_fragment_units_conversion">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/units_conversion_screen_background_color">

                <TextView
                    android:id="@+id/textView"
                    style="@style/SpinnerInfoTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/from_string"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Spinner
                    android:id="@+id/units_conversion_spinnerFrom"
                    style="@style/units_conversion_spinners"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <TextView
                    android:id="@+id/textView5"
                    style="@style/SpinnerInfoTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/to_string"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/units_conversion_spinnerFrom" />

                <Spinner
                    android:id="@+id/units_conversion_spinnerTo"
                    style="@style/units_conversion_spinners"
                    app:layout_constraintBottom_toTopOf="@+id/input_converter"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView5"
                    app:layout_constraintVertical_bias="0.0" />

                <EditText
                    android:id="@+id/input_converter"
                    style="@style/units_conversion_edit_text_input"
                    app:layout_constraintBottom_toTopOf="@+id/output_converter"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/output_converter"
                    style="@style/units_conversion_edit_text_output"
                    app:layout_constraintBottom_toTopOf="@+id/divider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginBottom="4dp"
                    android:background="?android:attr/listDivider"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <LinearLayout
                    android:id="@+id/linearLayout4"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/units_conversion_button_container_height"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <Button
                        android:id="@+id/button_clear"
                        style="@style/units_conversion_func_buttons"
                        android:onClick="@{unitsConversion::onClickFunctionButtons}"
                        android:text="@string/button_clear"
                        tools:layout_editor_absoluteX="98dp"
                        tools:layout_editor_absoluteY="518dp" />

                    <Button
                        android:id="@+id/button_sign"
                        style="@style/units_conversion_func_buttons"
                        android:onClick="@{unitsConversion::onClickFunctionButtons}"                        android:text="@string/button_plus_minus"
                        tools:layout_editor_absoluteX="153dp"
                        tools:layout_editor_absoluteY="518dp" />

                    <Button
                        android:id="@+id/button_delete"
                        style="@style/units_conversion_func_buttons"
                        android:onClick="@{unitsConversion::onClickFunctionButtons}"
                        android:text="@string/button_delete"
                        tools:layout_editor_absoluteX="209dp"
                        tools:layout_editor_absoluteY="518dp" />

                    <Button
                        android:id="@+id/button_reverse"
                        style="@style/units_conversion_func_buttons"
                        android:onClick="@{unitsConversion::onClickFunctionButtons}"
                        android:text="@string/button_reverse"
                        tools:layout_editor_absoluteX="268dp"
                        tools:layout_editor_absoluteY="518dp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/units_conversion_button_container_height"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <Button
                        android:id="@+id/button_7"
                        style="@style/units_conversion_digit_buttons"
                        android:onClick="@{unitsConversion::onClickDigitButtons}"
                        android:text="@string/button_7"
                        tools:layout_editor_absoluteX="83dp"
                        tools:layout_editor_absoluteY="424dp" />

                    <Button
                        android:id="@+id/button_8"
                        style="@style/units_conversion_digit_buttons"
                        android:onClick="@{unitsConversion::onClickDigitButtons}"
                        android:text="@string/button_8"
                        tools:layout_editor_absoluteX="161dp"
                        tools:layout_editor_absoluteY="443dp" />

                    <Button
                        android:id="@+id/button_9"
                        style="@style/units_conversion_digit_buttons"
                        android:onClick="@{unitsConversion::onClickDigitButtons}"
                        android:text="@string/button_9"
                        tools:layout_editor_absoluteX="235dp"
                        tools:layout_editor_absoluteY="443dp" />

                    <Button
                        android:id="@+id/button_copy"
                        style="@style/units_conversion_func_buttons"
                        android:text="@string/button_copy"
                        tools:layout_editor_absoluteX="306dp"
                        tools:layout_editor_absoluteY="432dp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/units_conversion_button_container_height"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <Button
                        android:id="@+id/button_4"
                        style="@style/units_conversion_digit_buttons"
                        android:onClick="@{unitsConversion::onClickDigitButtons}"
                        android:text="@string/button_4"
                        tools:layout_editor_absoluteX="83dp"
                        tools:layout_editor_absoluteY="512dp" />

                    <Button
                        android:id="@+id/button_5"
                        style="@style/units_conversion_digit_buttons"
                        android:onClick="@{unitsConversion::onClickDigitButtons}"
                        android:text="@string/button_5"
                        tools:layout_editor_absoluteX="171dp"
                        tools:layout_editor_absoluteY="512dp" />

                    <Button
                        android:id="@+id/button_6"
                        style="@style/units_conversion_digit_buttons"
                        android:onClick="@{unitsConversion::onClickDigitButtons}"
                        android:text="@string/button_6"
                        tools:layout_editor_absoluteX="242dp"
                        tools:layout_editor_absoluteY="504dp" />

                    <Button
                        android:id="@+id/button_dot"
                        style="@style/units_conversion_digit_buttons"
                        android:onClick="@{unitsConversion::onClickFunctionButtons}"
                        android:text="@string/button_dot"
                        tools:layout_editor_absoluteX="329dp"
                        tools:layout_editor_absoluteY="491dp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/units_conversion_button_container_height"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <Button
                        android:id="@+id/button_1"
                        style="@style/units_conversion_digit_buttons"
                        android:onClick="@{unitsConversion::onClickDigitButtons}"
                        android:text="@string/button_1"
                        tools:layout_editor_absoluteX="25dp"
                        tools:layout_editor_absoluteY="630dp" />

                    <Button
                        android:id="@+id/button_2"
                        style="@style/units_conversion_digit_buttons"
                        android:onClick="@{unitsConversion::onClickDigitButtons}"
                        android:text="@string/button_2"
                        tools:layout_editor_absoluteX="131dp"
                        tools:layout_editor_absoluteY="630dp" />

                    <Button
                        android:id="@+id/button_3"
                        style="@style/units_conversion_digit_buttons"
                        android:onClick="@{unitsConversion::onClickDigitButtons}"
                        android:text="@string/button_3"
                        tools:layout_editor_absoluteX="242dp"
                        tools:layout_editor_absoluteY="630dp" />

                    <Button
                        android:id="@+id/button_0"
                        style="@style/units_conversion_digit_buttons"
                        android:onClick="@{unitsConversion::onClickDigitButtons}"
                        android:text="@string/button_0"
                        tools:layout_editor_absoluteX="347dp"
                        tools:layout_editor_absoluteY="641dp" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>